--- a/crates/services/Cargo.toml
+++ b/crates/services/Cargo.toml
@@ -3,6 +3,10 @@ name = "services"
 version = "0.0.66"
 edition = "2024"
 
+[features]
+default = ["keyring"]
+keyring = ["dep:keyring"]
+
 [dependencies]
 utils = { path = "../utils" }
 executors = { path = "../executors" }
@@ -55,3 +59,6 @@ dunce = "1.0"
 dashmap = "6.1"
 once_cell = "1.20"
 sha2 = "0.10"
+url = "2.5"
+rand = "0.9"
+keyring = { version = "3.6", features = ["apple-native"], optional = true }
