--- a/crates/services/Cargo.toml
+++ b/crates/services/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [features]
 default = ["keyring"]
 keyring = ["dep:keyring"]
+cloud = []
 
 [dependencies]
 utils = { path = "../utils" }
